--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Noah Overcash <novercash@ebsco.com>",
   "license": "Apache-2.0",
   "private": false,
+  "type": "module",
   "devDependencies": {
     "@types/node": "^20.3.1",
     "ts-node": "^10.9.1",
@@ -13,5 +14,12 @@
   },
   "scripts": {
     "benchmark": "ts-node index.ts"
+  },
+  "dependencies": {
+    "@aws-sdk/client-s3": "^3.359.0",
+    "@aws-sdk/s3-request-presigner": "^3.359.0",
+    "benny": "^3.7.1",
+    "ky": "^0.33.3",
+    "ky-universal": "^0.11.0"
   }
 }
