--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "s3-speed-comparison",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "benchmark.ts",
   "repository": "https://github.com/ncovercash/s3-speed-comparison",
   "author": "Noah Overcash <novercash@ebsco.com>",
   "license": "Apache-2.0",
@@ -13,7 +13,8 @@
     "typescript": "^5.1.3"
   },
   "scripts": {
-    "benchmark": "ts-node index.ts"
+    "benchmark": "ts-node index.ts",
+    "chart": "ts-node chart.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.359.0",
