--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": false,
   "type": "module",
   "devDependencies": {
+    "@types/fast-stats": "^0.0.32",
     "@types/node": "^20.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
@@ -19,7 +20,11 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.359.0",
     "@aws-sdk/s3-request-presigner": "^3.359.0",
+    "chart.js": "^4.3.0",
+    "chartjs-to-image": "^1.2.1",
+    "fast-stats": "^0.0.6",
     "ky": "^0.33.3",
-    "ky-universal": "^0.11.0"
+    "ky-universal": "^0.11.0",
+    "table": "^6.8.1"
   }
 }
