--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "typescript": "^5.1.3"
   },
   "scripts": {
-    "benchmark": "ts-node index.ts",
+    "benchmark": "ts-node benchmark.ts",
     "chart": "ts-node chart.ts"
   },
   "dependencies": {
